tests/fixtures/valid_programs/arrays.cryo
namespace Main;

import IO from <io/stdio>;
import <core/types>;

// Array operations
function test_array_literals() -> void {
    const numbers: int[] = [1, 2, 3, 4, 5];
    const names: string[] = ["Alice", "Bob", "Charlie"];
    const empty: int[] = [];
    return;
}

function test_array_access() -> void {
    const numbers: int[] = [10, 20, 30, 40, 50];
    const first: int = numbers[0];
    const third: int = numbers[2];
    const index: int = 1;
    const second: int = numbers[index];
    return;
}

function test_multidimensional_arrays() -> void {
    const matrix: int[][] = [[1, 2, 3], [4, 5, 6], [7, 8, 9]];
    const element: int = matrix[1][2];
    return;
}

function main() -> int {
    test_array_literals();
    test_array_access();
    test_multidimensional_arrays();
    return 0;
}