tests/fixtures/invalid_programs/array_out_of_bounds.cryo
namespace Main;

// This should fail: Array out of bounds access
function test_array_bounds_violation() -> int {
    const arr: int[] = [1, 2, 3];
    const invalid_value: int = arr[10];  // Should cause bounds check error
    return invalid_value;
}